# jsdSkillHub

./: .env.example  .gitignore  AGENT-ARCHITECTURE.md  AGENTS.md  BUGS.md  CHANGELOG.md  CLAUDE.md  CURSOR_TASK2.md  CURSOR_TASK3.md  CURSOR_TASK_P0.md  DOC-LIFECYCLE.md  INTERN-DEV-CHECKLIST.md  LICENSE  PROGRESS.md  README.md  TEAM-MANUAL.md  docker-compose.yml  run.sh  tech-selection.md
.cursor/rules/: api-conventions.mdc  backend-rules.mdc  database.mdc  frontend-rules.mdc  (+3 more)
backend/: .env.example  .gitignore  Dockerfile  alembic.ini  requirements.txt
core/: API-KEYS-REFERENCE.md  MRD.tex  PRD.tex  RFC.tex  TRD.tex
demands/: DEMAND-000-v0-master.tex  DEMAND-001-role-redefine.tex  DEMAND-002-dev-env-setup.tex  DEMAND-003-task-workflow.tex  DEMAND-004-multi-agent-collaboration.tex  DEMAND-005-mvp-upload-review.tex  DEMAND-006-frontend-rewrite.tex  DEMAND-007-flow-fix-and-install.tex  DEMAND-008-dir-framework-rebuild.tex  DEMAND-009-email-auth-and-lifecycle.tex  DEMAND-010-frontend-ui-upgrade.tex  DEMAND-012.md  DEMAND-016-user-settings.tex  GUIDE-001-project-structure.tex  GUIDE-002-project-methodology.tex  MASTER.tex  _archive_demands-README.md
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
memory/: 2026-05-06.md
reference/: DOC-NAMING-CONVENTION.tex  REF-001-skill-store-arch-survey.tex  REF-002-project-master-plan.tex  REF-003-open-skills-ecosystem.tex  agent-skills-appstore-research.md
skillhub-cli/: REVIEW_TASK.md  pyproject.toml
skillhub-cli/src/skillhub/: __main__.py  cli.py  client.py  config.py  install.py
(+73 files in other folders)
