[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "skillhub-cli"
version = "0.1.0"
description = "SkillHub command line client"
requires-python = ">=3.10"
dependencies = [
  "typer[rich]",
  "httpx",
  "toml; python_version < '3.11'",
]

[project.scripts]
skillhub = "skillhub.cli:app"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
