[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "jsdhub"
version = "0.3.0"
description = "JSD SkillHub CLI - install and manage AI agent skills from the JSD Skill Store"
requires-python = ">=3.10"
dependencies = [
  "typer[rich]",
  "httpx",
]

[project.urls]
Homepage = "https://github.com/wzzfather/jsdSkillHub"

[project.scripts]
jsdhub = "skillhub.cli:app"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
